// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-secondary border border-f1-border"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan bold types 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-accent-bold"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground-inverse"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan defauly types 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-secondary border border-f1-border"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan defauly types 2`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-secondary border border-f1-border"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan md size 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-secondary border border-f1-border"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan selected types 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-selected-bold outline-f1-border-selected"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground-inverse"
    >
      42
    </Text>
  </View>
</View>
`;

exports[`Counter Snapshot vairan sm size 1`] = `
<View
  className="flex items-start"
>
  <View
    className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-4 h-4 bg-f1-background-secondary border border-f1-border"
  >
    <Text
      className="text-center text-sm font-medium tabular-nums whitespace-nowrap leading-none py-0.5 text-f1-foreground"
    >
      42
    </Text>
  </View>
</View>
`;
